Alignment issues done, work more on colors

--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,8 @@
 		
 
 <!--{{days}}  : {{hours}} : {{minutes}} : {{seconds}}-->
-{{days + ':' + hours + ':' + minutes + ':' + seconds}}
-
+{{days + ':' + hours + ':' + minutes + ':' + seconds}} <br>
+<div style="font-size:80px;left:14px;position:relative;">Days  &nbsp;&nbsp;&nbsp;Hours &nbsp;&nbsp;Minutes&nbsp;  Seconds </div>
 <!--{{timerData}} -->
 
 
@@ -46,7 +46,7 @@
 
 $('#header').boxfit();
 $('#timer').boxfit(){
-	
+	s
 };
 $('#labels').boxfit();
 </script>
