--- a/app/index.html
+++ b/app/index.html
@@ -14,42 +14,23 @@
 
 	<!-- Video Background -->
 
-	
-<video autoplay loop poster="polina.jpg" id="bgvid">
-<source src="videos/Fast-Clock-Time-Motion-Background.mp4" type="video/mp4">
+
+<video autoplay loop poster="img/clock.jpg" id="bgvid">
+<source src="videos/timeisnow.mp4" type="video/mp4">
 </video>
 
 
-	<div data-ng-controller="countdownController" id="timer">
+	<div data-ng-cloak data-ng-controller="countdownController" id="timer"  class="ng-cloak">
 		
 
 <!--{{days}}  : {{hours}} : {{minutes}} : {{seconds}}-->
 {{days + ':' + hours + ':' + minutes + ':' + seconds}} <br>
 <div style="font-size:80px;left:14px;position:relative;">Days  &nbsp;&nbsp;&nbsp;Hours &nbsp;&nbsp;Minutes&nbsp;  Seconds </div>
 <!--{{timerData}} -->
-
-
-
 	
 </div>
 
-
-
-
-
-
-
 <div id="header">Countdown To Year 2015</div>
-
-
-<script>
-
-$('#header').boxfit();
-$('#timer').boxfit(){
-	s
-};
-$('#labels').boxfit();
-</script>
 
 
 </body>
