--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 	<!-- Video Background -->
 
 
-<video autoplay loop poster="img/clock.jpg" id="bgvid">
+<video autoplay loop poster="img/clock.png" id="bgvid">
 <source src="videos/timeisnow.mp4" type="video/mp4">
 </video>
 
